Fixing Z-index in style.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 .back-cover {
 	position: relative;
-	z-index: -1;
+	z-index: 0;
 }
 .page {
 	position: absolute;
